@@ -23,4 +23,5 @@ int
 main ()
 {
   c.f ();
+  c ();
 }
