@@ -19,4 +19,5 @@ class C
 {
 public:
   static void f ();
+  void operator () ();
 };
